# MRS-Sim

./: .gitignore  .gitmodules  .~ver Letter.docx  30ms_echo_coil_transient_samples.py  30ms_echo_publication.py  30ms_echo_publication_r3.py  30ms_echo_samples_by_artifact.py  Baseline & Residual Water Simulator.ipynb  Baseline_Simulator.ipynb  CODE_OF_CONDUCT.md  Cover Letter.docx  Future Additions.txt  Graphical Abstract Text.docx  Intro and Methods in word doc for revisions.docx  README.md  Sampling_Denoising_Dataset.py  Simulation Notebook.ipynb  Simulation Tutorial.ipynb  config_template.json  mrs-sim_deep_learning_dataset_template.py  mrs-sim_template.py  pyproject.toml
.MRS-Sim_Main_Manuscript/: main.tex
.MRS-Sim_Supplement/: main.tex  mybibliography.bib
.MRS-Sim_rebuttal/: MRS_Sim_track_changes.aux  MRS_Sim_track_changes.bbl  MRS_Sim_track_changes.ist  WileyNJD-v2.cls  main.tex
.images/: MRS-Sim_Graphical_Abstract_Figure.eps  MRS_Sim_pm_stages.eps
.ipynb_checkpoints/: Baseline & Residual Water Simulator-checkpoint.ipynb  Baseline_Simulator-checkpoint.ipynb  Simulation Tutorial-checkpoint.ipynb
Database/: README.md
MRS-Sim_Main_Manuscript/: WileyNJD-v2.cls
MRS-Sim_rebuttal/: MRS_Sim_track_changes.blg  MRS_Sim_track_changes.dvi  MRS_Sim_track_changes.tex  mybibliography.bib
MRSSIM_rebuttal2_track_changes/: main.tex  mybibliography.bib  supp_bib_sec_00.bib  supplement.tex  track_changes.tex
images/: CodeCogsEqn(14).eps  MRS-Sim Graphical Abstract Figure.eps
latexdiff/: MRS_Sim_track_changes.tex
src/: 30ms_echo_publication.py  Next steps:  aux.py  (+22 more)
(+405 files in other folders)
