[tool.poetry]
name = "mrs-sim"
version = "0.1.0"
description = ""
authors = ["John LaMaster <jlamaste@gmail.com>"]
readme = "README.md"
packages = [{include = "mrs_sim"}]

[tool.poetry.dependencies]
python = "3.9.7"
h5py = "3.1.0"
jupyterlab = "4.0.1"
matplotlib = "3.5.1"
nibabel = "4.0.2"
numpy = "1.22.0"
pickle5 = "0.0.11"
torch = "1.11.0"
scipy = "1.7.3"
fitter = "1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
